--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ h1 {
     display: grid;
     width: 100%;
     height: 100%;
+    display: grid;
     justify-content: center;
     align-content: center;
     justify-items: center;
@@ -38,7 +39,9 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
+
 
 .cell:nth-child(1),
 .cell:nth-child(2),
@@ -63,6 +66,40 @@ h1 {
 .cell:nth-child(9) {
     border-bottom: none;
 }
+
+
+
+
+.cell.x::before, .cell.x::after {
+    content: "";
+    height: calc(100px * 0.15);
+    width: calc(100px * 0.9);
+    background: white;    
+    position: absolute;
+}
+
+.cell.x::before {
+    transform: rotate(+45deg);
+}
+
+.cell.x::after: {
+    transform: rotate(-45deg);
+}
+
+
+
+
+
+.cell.circle::before, .cell.circle::after {
+    content: "";
+    height: calc(100px * 0.9);
+    width: calc(100px * 0.9);
+    background: white;    
+    position: absolute;
+    border-radius: 50%;
+}
+
+
 
 .winning-message {
     display: none;
