--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ h1 {
 
 .board {
     display: grid;
+    margin: auto;
     width: 100%;
     height: 100%;
     display: grid;
@@ -83,24 +84,21 @@ h1 {
 }
 
 
-
-
 .cell.x::before, .cell.x::after {
-    content: "";
-    height: calc(100px * 0.15);
-    width: calc(100px * 0.9);
-    background: white;    
-    position: absolute;
+  content: "";
+  height: calc(100px * 0.15);
+  width: calc(100px * 0.9);
+  background: antiquewhite;
+  position: absolute;
 }
 
 .cell.x::before {
-    transform: rotate(+45deg);
+  transform: rotate(45deg);
 }
 
-.cell.x::after: {
-    transform: rotate(-45deg);
+.cell.x::after {
+  transform: rotate(-45deg);
 }
-
 
 .cell.circle::before, .cell.circle::after {
     content: "";
@@ -113,7 +111,7 @@ h1 {
 
 
 .winning-message {
-    display: flex;
+    display: none;
     position: fixed;
     top: 0;
     left: 0;
@@ -148,3 +146,7 @@ h1 {
     color: antiquewhite;
     font-size: 3rem;   
 }
+
+.show-winning-message {
+    display: flex;
+  }
